@@ -1956,14 +1956,14 @@ module Raylib
       :GetScreenHeight => :int,
       :GetMonitorCount => :int,
       :GetCurrentMonitor => :int,
-      :GetMonitorPosition => Vector2,
+      :GetMonitorPosition => Vector2.by_value,
       :GetMonitorWidth => :int,
       :GetMonitorHeight => :int,
       :GetMonitorPhysicalWidth => :int,
       :GetMonitorPhysicalHeight => :int,
       :GetMonitorRefreshRate => :int,
-      :GetWindowPosition => Vector2,
-      :GetWindowScaleDPI => Vector2,
+      :GetWindowPosition => Vector2.by_value,
+      :GetWindowScaleDPI => Vector2.by_value,
       :GetMonitorName => :pointer,
       :SetClipboardText => :void,
       :GetClipboardText => :pointer,
@@ -1993,10 +1993,10 @@ module Raylib
       :EndScissorMode => :void,
       :BeginVrStereoMode => :void,
       :EndVrStereoMode => :void,
-      :LoadVrStereoConfig => VrStereoConfig,
+      :LoadVrStereoConfig => VrStereoConfig.by_value,
       :UnloadVrStereoConfig => :void,
-      :LoadShader => Shader,
-      :LoadShaderFromMemory => Shader,
+      :LoadShader => Shader.by_value,
+      :LoadShaderFromMemory => Shader.by_value,
       :GetShaderLocation => :int,
       :GetShaderLocationAttrib => :int,
       :SetShaderValue => :void,
@@ -2004,13 +2004,13 @@ module Raylib
       :SetShaderValueMatrix => :void,
       :SetShaderValueTexture => :void,
       :UnloadShader => :void,
-      :GetMouseRay => Ray,
-      :GetCameraMatrix => Matrix,
-      :GetCameraMatrix2D => Matrix,
-      :GetWorldToScreen => Vector2,
-      :GetWorldToScreenEx => Vector2,
-      :GetWorldToScreen2D => Vector2,
-      :GetScreenToWorld2D => Vector2,
+      :GetMouseRay => Ray.by_value,
+      :GetCameraMatrix => Matrix.by_value,
+      :GetCameraMatrix2D => Matrix.by_value,
+      :GetWorldToScreen => Vector2.by_value,
+      :GetWorldToScreenEx => Vector2.by_value,
+      :GetWorldToScreen2D => Vector2.by_value,
+      :GetScreenToWorld2D => Vector2.by_value,
       :SetTargetFPS => :void,
       :GetFPS => :int,
       :GetFrameTime => :float,
@@ -2080,8 +2080,8 @@ module Raylib
       :IsMouseButtonUp => :bool,
       :GetMouseX => :int,
       :GetMouseY => :int,
-      :GetMousePosition => Vector2,
-      :GetMouseDelta => Vector2,
+      :GetMousePosition => Vector2.by_value,
+      :GetMouseDelta => Vector2.by_value,
       :SetMousePosition => :void,
       :SetMouseOffset => :void,
       :SetMouseScale => :void,
@@ -2089,16 +2089,16 @@ module Raylib
       :SetMouseCursor => :void,
       :GetTouchX => :int,
       :GetTouchY => :int,
-      :GetTouchPosition => Vector2,
+      :GetTouchPosition => Vector2.by_value,
       :GetTouchPointId => :int,
       :GetTouchPointCount => :int,
       :SetGesturesEnabled => :void,
       :IsGestureDetected => :bool,
       :GetGestureDetected => :int,
       :GetGestureHoldDuration => :float,
-      :GetGestureDragVector => Vector2,
+      :GetGestureDragVector => Vector2.by_value,
       :GetGestureDragAngle => :float,
-      :GetGesturePinchVector => Vector2,
+      :GetGesturePinchVector => Vector2.by_value,
       :GetGesturePinchAngle => :float,
       :SetCameraMode => :void,
       :UpdateCamera => :void,
@@ -2152,27 +2152,27 @@ module Raylib
       :CheckCollisionPointTriangle => :bool,
       :CheckCollisionLines => :bool,
       :CheckCollisionPointLine => :bool,
-      :GetCollisionRec => Rectangle,
-      :LoadImage => Image,
-      :LoadImageRaw => Image,
-      :LoadImageAnim => Image,
-      :LoadImageFromMemory => Image,
-      :LoadImageFromTexture => Image,
-      :LoadImageFromScreen => Image,
+      :GetCollisionRec => Rectangle.by_value,
+      :LoadImage => Image.by_value,
+      :LoadImageRaw => Image.by_value,
+      :LoadImageAnim => Image.by_value,
+      :LoadImageFromMemory => Image.by_value,
+      :LoadImageFromTexture => Image.by_value,
+      :LoadImageFromScreen => Image.by_value,
       :UnloadImage => :void,
       :ExportImage => :bool,
       :ExportImageAsCode => :bool,
-      :GenImageColor => Image,
-      :GenImageGradientV => Image,
-      :GenImageGradientH => Image,
-      :GenImageGradientRadial => Image,
-      :GenImageChecked => Image,
-      :GenImageWhiteNoise => Image,
-      :GenImageCellular => Image,
-      :ImageCopy => Image,
-      :ImageFromImage => Image,
-      :ImageText => Image,
-      :ImageTextEx => Image,
+      :GenImageColor => Image.by_value,
+      :GenImageGradientV => Image.by_value,
+      :GenImageGradientH => Image.by_value,
+      :GenImageGradientRadial => Image.by_value,
+      :GenImageChecked => Image.by_value,
+      :GenImageWhiteNoise => Image.by_value,
+      :GenImageCellular => Image.by_value,
+      :ImageCopy => Image.by_value,
+      :ImageFromImage => Image.by_value,
+      :ImageText => Image.by_value,
+      :ImageTextEx => Image.by_value,
       :ImageFormat => :void,
       :ImageToPOT => :void,
       :ImageCrop => :void,
@@ -2199,8 +2199,8 @@ module Raylib
       :LoadImagePalette => :pointer,
       :UnloadImageColors => :void,
       :UnloadImagePalette => :void,
-      :GetImageAlphaBorder => Rectangle,
-      :GetImageColor => Color,
+      :GetImageAlphaBorder => Rectangle.by_value,
+      :GetImageColor => Color.by_value,
       :ImageClearBackground => :void,
       :ImageDrawPixel => :void,
       :ImageDrawPixelV => :void,
@@ -2215,10 +2215,10 @@ module Raylib
       :ImageDraw => :void,
       :ImageDrawText => :void,
       :ImageDrawTextEx => :void,
-      :LoadTexture => Texture2D,
-      :LoadTextureFromImage => Texture2D,
-      :LoadTextureCubemap => TextureCubemap,
-      :LoadRenderTexture => RenderTexture2D,
+      :LoadTexture => Texture2D.by_value,
+      :LoadTextureFromImage => Texture2D.by_value,
+      :LoadTextureCubemap => TextureCubemap.by_value,
+      :LoadRenderTexture => RenderTexture2D.by_value,
       :UnloadTexture => :void,
       :UnloadRenderTexture => :void,
       :UpdateTexture => :void,
@@ -2235,25 +2235,25 @@ module Raylib
       :DrawTexturePro => :void,
       :DrawTextureNPatch => :void,
       :DrawTexturePoly => :void,
-      :Fade => Color,
+      :Fade => Color.by_value,
       :ColorToInt => :int,
-      :ColorNormalize => Vector4,
-      :ColorFromNormalized => Color,
-      :ColorToHSV => Vector3,
-      :ColorFromHSV => Color,
-      :ColorAlpha => Color,
-      :ColorAlphaBlend => Color,
-      :GetColor => Color,
-      :GetPixelColor => Color,
+      :ColorNormalize => Vector4.by_value,
+      :ColorFromNormalized => Color.by_value,
+      :ColorToHSV => Vector3.by_value,
+      :ColorFromHSV => Color.by_value,
+      :ColorAlpha => Color.by_value,
+      :ColorAlphaBlend => Color.by_value,
+      :GetColor => Color.by_value,
+      :GetPixelColor => Color.by_value,
       :SetPixelColor => :void,
       :GetPixelDataSize => :int,
-      :GetFontDefault => Font,
-      :LoadFont => Font,
-      :LoadFontEx => Font,
-      :LoadFontFromImage => Font,
-      :LoadFontFromMemory => Font,
+      :GetFontDefault => Font.by_value,
+      :LoadFont => Font.by_value,
+      :LoadFontEx => Font.by_value,
+      :LoadFontFromImage => Font.by_value,
+      :LoadFontFromMemory => Font.by_value,
       :LoadFontData => :pointer,
-      :GenImageFontAtlas => Image,
+      :GenImageFontAtlas => Image.by_value,
       :UnloadFontData => :void,
       :UnloadFont => :void,
       :DrawFPS => :void,
@@ -2262,10 +2262,10 @@ module Raylib
       :DrawTextPro => :void,
       :DrawTextCodepoint => :void,
       :MeasureText => :int,
-      :MeasureTextEx => Vector2,
+      :MeasureTextEx => Vector2.by_value,
       :GetGlyphIndex => :int,
-      :GetGlyphInfo => GlyphInfo,
-      :GetGlyphAtlasRec => Rectangle,
+      :GetGlyphInfo => GlyphInfo.by_value,
+      :GetGlyphAtlasRec => Rectangle.by_value,
       :LoadCodepoints => :pointer,
       :UnloadCodepoints => :void,
       :GetCodepointCount => :int,
@@ -2308,11 +2308,11 @@ module Raylib
       :DrawPlane => :void,
       :DrawRay => :void,
       :DrawGrid => :void,
-      :LoadModel => Model,
-      :LoadModelFromMesh => Model,
+      :LoadModel => Model.by_value,
+      :LoadModelFromMesh => Model.by_value,
       :UnloadModel => :void,
       :UnloadModelKeepMeshes => :void,
-      :GetModelBoundingBox => BoundingBox,
+      :GetModelBoundingBox => BoundingBox.by_value,
       :DrawModel => :void,
       :DrawModelEx => :void,
       :DrawModelWires => :void,
@@ -2327,22 +2327,22 @@ module Raylib
       :DrawMesh => :void,
       :DrawMeshInstanced => :void,
       :ExportMesh => :bool,
-      :GetMeshBoundingBox => BoundingBox,
+      :GetMeshBoundingBox => BoundingBox.by_value,
       :GenMeshTangents => :void,
       :GenMeshBinormals => :void,
-      :GenMeshPoly => Mesh,
-      :GenMeshPlane => Mesh,
-      :GenMeshCube => Mesh,
-      :GenMeshSphere => Mesh,
-      :GenMeshHemiSphere => Mesh,
-      :GenMeshCylinder => Mesh,
-      :GenMeshCone => Mesh,
-      :GenMeshTorus => Mesh,
-      :GenMeshKnot => Mesh,
-      :GenMeshHeightmap => Mesh,
-      :GenMeshCubicmap => Mesh,
+      :GenMeshPoly => Mesh.by_value,
+      :GenMeshPlane => Mesh.by_value,
+      :GenMeshCube => Mesh.by_value,
+      :GenMeshSphere => Mesh.by_value,
+      :GenMeshHemiSphere => Mesh.by_value,
+      :GenMeshCylinder => Mesh.by_value,
+      :GenMeshCone => Mesh.by_value,
+      :GenMeshTorus => Mesh.by_value,
+      :GenMeshKnot => Mesh.by_value,
+      :GenMeshHeightmap => Mesh.by_value,
+      :GenMeshCubicmap => Mesh.by_value,
       :LoadMaterials => :pointer,
-      :LoadMaterialDefault => Material,
+      :LoadMaterialDefault => Material.by_value,
       :UnloadMaterial => :void,
       :SetMaterialTexture => :void,
       :SetModelMeshMaterial => :void,
@@ -2354,20 +2354,20 @@ module Raylib
       :CheckCollisionSpheres => :bool,
       :CheckCollisionBoxes => :bool,
       :CheckCollisionBoxSphere => :bool,
-      :GetRayCollisionSphere => RayCollision,
-      :GetRayCollisionBox => RayCollision,
-      :GetRayCollisionModel => RayCollision,
-      :GetRayCollisionMesh => RayCollision,
-      :GetRayCollisionTriangle => RayCollision,
-      :GetRayCollisionQuad => RayCollision,
+      :GetRayCollisionSphere => RayCollision.by_value,
+      :GetRayCollisionBox => RayCollision.by_value,
+      :GetRayCollisionModel => RayCollision.by_value,
+      :GetRayCollisionMesh => RayCollision.by_value,
+      :GetRayCollisionTriangle => RayCollision.by_value,
+      :GetRayCollisionQuad => RayCollision.by_value,
       :InitAudioDevice => :void,
       :CloseAudioDevice => :void,
       :IsAudioDeviceReady => :bool,
       :SetMasterVolume => :void,
-      :LoadWave => Wave,
-      :LoadWaveFromMemory => Wave,
-      :LoadSound => Sound,
-      :LoadSoundFromWave => Sound,
+      :LoadWave => Wave.by_value,
+      :LoadWaveFromMemory => Wave.by_value,
+      :LoadSound => Sound.by_value,
+      :LoadSoundFromWave => Sound.by_value,
       :UpdateSound => :void,
       :UnloadWave => :void,
       :UnloadSound => :void,
@@ -2384,12 +2384,12 @@ module Raylib
       :SetSoundVolume => :void,
       :SetSoundPitch => :void,
       :WaveFormat => :void,
-      :WaveCopy => Wave,
+      :WaveCopy => Wave.by_value,
       :WaveCrop => :void,
       :LoadWaveSamples => :pointer,
       :UnloadWaveSamples => :void,
-      :LoadMusicStream => Music,
-      :LoadMusicStreamFromMemory => Music,
+      :LoadMusicStream => Music.by_value,
+      :LoadMusicStreamFromMemory => Music.by_value,
       :UnloadMusicStream => :void,
       :PlayMusicStream => :void,
       :IsMusicStreamPlaying => :bool,
@@ -2402,7 +2402,7 @@ module Raylib
       :SetMusicPitch => :void,
       :GetMusicTimeLength => :float,
       :GetMusicTimePlayed => :float,
-      :LoadAudioStream => AudioStream,
+      :LoadAudioStream => AudioStream.by_value,
       :UnloadAudioStream => :void,
       :UpdateAudioStream => :void,
       :IsAudioStreamProcessed => :bool,
