@@ -283,7 +283,7 @@ module Raylib
       :Vector3Max => :int,
       :Vector3Barycenter => :int,
       :Vector3Unproject => :int,
-      :Vector3ToFloatV => float3,
+      :Vector3ToFloatV => float3.by_value,
       :MatrixDeterminant => :float,
       :MatrixTrace => :float,
       :MatrixTranspose => :int,
@@ -305,7 +305,7 @@ module Raylib
       :MatrixPerspective => :int,
       :MatrixOrtho => :int,
       :MatrixLookAt => :int,
-      :MatrixToFloatV => float16,
+      :MatrixToFloatV => float16.by_value,
       :QuaternionAdd => :int,
       :QuaternionAddValue => :int,
       :QuaternionSubtract => :int,
