@@ -6,6 +6,8 @@
 	* examples/shapes_basic_shapes.rb: Added
 	* generator: Now correctly handles variable-length arguments (TextFormat and TraceLog)
 	* Added helper functions (Color.from_u8, Vector2.create, etc.)
+	* examples/core_3d_camera_first_person.rb: Added
+	* generator: Now correctly handles return values
 
 2021-10-23  vaiorabbit  <http://twitter.com/vaiorabbit>
 
